Mouse pointer/cursor doesn't update when changing tools via shortcut or pop up menu #67805

Closed
opened 2019-07-27 17:50:49 +02:00 by Ricardo Drehmer · 23 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: 507ffee6e1
Worked: (optional)

Short description of error
Mouse pointer doesn't change to the tool you have selected if you use shortcut or pop up menu.
For example, if are using Knife tool, the pointer looks like a... Knife. But if then change to Select or any other tool via shortcut or using the pop up menu, it will keep the little white knife as the pointer even though you are now using another tool.

Exact steps for others to reproduce the error
(Using LEFT-CLICK mode).

  • Default startup file
  • Enter EDIT MODE on Cube
  • Change tool to KNIFE (clicking on toolbar on left)
  • Now change to SELECT BOX via shortcut (W default) or using pop up menu via Shift Spacebar

You will see that the mouse pointer keeps a Knife icon, even though you can normally use the function of the tool you've selected.

The opposite is also true. If you are on SELECT BOX and change to KNIFE via pop up meno (shift spacebar) the pointer doesn't update.

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 14:22, hash: `507ffee6e1` Worked: (optional) **Short description of error** Mouse pointer doesn't change to the tool you have selected if you use shortcut or pop up menu. For example, if are using Knife tool, the pointer looks like a... Knife. But if then change to Select or any other tool via shortcut or using the pop up menu, it will keep the little white knife as the pointer even though you are now using another tool. **Exact steps for others to reproduce the error** (Using LEFT-CLICK mode). - Default startup file - Enter EDIT MODE on Cube - Change tool to KNIFE (clicking on toolbar on left) - Now change to SELECT BOX via shortcut (W default) or using pop up menu via Shift Spacebar You will see that the mouse pointer keeps a Knife icon, even though you can normally use the function of the tool you've selected. The opposite is also true. If you are on SELECT BOX and change to KNIFE via pop up meno (shift spacebar) the pointer doesn't update.

Added subscriber: @RDrehmer

Added subscriber: @RDrehmer

#73175 was marked as duplicate of this issue

#73175 was marked as duplicate of this issue

#65329 was marked as duplicate of this issue

#65329 was marked as duplicate of this issue

#74039 was marked as duplicate of this issue

#74039 was marked as duplicate of this issue

#73986 was marked as duplicate of this issue

#73986 was marked as duplicate of this issue

#73764 was marked as duplicate of this issue

#73764 was marked as duplicate of this issue

#58542 was marked as duplicate of this issue

#58542 was marked as duplicate of this issue

#71818 was marked as duplicate of this issue

#71818 was marked as duplicate of this issue

#71164 was marked as duplicate of this issue

#71164 was marked as duplicate of this issue
Member

Added subscribers: @Znio.G, @ideasman42, @mano-wii, @WayneDixon

Added subscribers: @Znio.G, @ideasman42, @mano-wii, @WayneDixon
Member

Added subscriber: @Endy73

Added subscriber: @Endy73
Member

Added subscribers: @drbones, @lichtwerk, @n1729, @cruelandunusual

Added subscribers: @drbones, @lichtwerk, @n1729, @cruelandunusual

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Since @ideasman42 is polishing tools, I think this report can make the cut.

Since @ideasman42 is polishing tools, I think this report can make the cut.
Member

Added subscriber: @graphic-guy

Added subscriber: @graphic-guy
Member

Added subscribers: @Luxary, @WilliamReynish

Added subscribers: @Luxary, @WilliamReynish
Member

Added subscriber: @Mobin.artworks

Added subscriber: @Mobin.artworks
Philipp Oeser changed title from Mouse pointer doesn't update when changing tools via shortcut or pop up menu to Mouse pointer/cursor doesn't update when changing tools via shortcut or pop up menu 2020-02-21 14:17:27 +01:00
Member
Added subscribers: @chuderluuri, @SinaBlender, @DrMc, @ed_lee, @EitanSomething, @DanielBystedt
Member

UI Mafia: should we consider this a High priority (since it is reported so often)?

UI Mafia: should we consider this a High priority (since it is reported so often)?

This issue was referenced by 4653d253b3

This issue was referenced by 4653d253b390fbb61163610d60ac4c0d21db23ae

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-21 16:02:50 +01:00

Thank you @ideasman42! Love you folks :)

Thank you @ideasman42! Love you folks :)

Added subscribers: @ToxicTuba, @3d0p, @PabloDobarro

Added subscribers: @ToxicTuba, @3d0p, @PabloDobarro
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67805
No description provided.