Fix T67805: Cursor doesn't update when switching tools via shortcuts